2008-07-25  Jonathan Gonzalez V.  <zeus@gnu.org>

	* postgres-functions.c (PutComa): Any coma or point will be
	replaced by the decimal point defined with the locale.

	* manejo_productos.c (CalcularTotalCompra): Changed to gdouble the
	type of variable total.

	* compras.c (SearchProductHistory): Used only the plpsql function
	informacion_producto() to get the info to show on buy tab. This
	will speed up the time that take show this information.

	* ventas.c (check_passwd, exit_response): Added the use of
	log_register_access () to log the login/logout of a user.

	* utils.c (log_register_access): Added function to register a log
	in/out of a user into the log table.

2008-07-24  Jonathan Gonzalez V.  <zeus@gnu.org>

	* caja.c (on_btn_cash_box_open_clicked)
	(on_btn_cash_box_close_clicked): Added functions to open and close
	the cash box using buttons from the main sell window.
	(on_btn_cash_box_clicked): Added function.

	* ventas.c (ventas_win): Removed call to prepare_caja() at the end.
	(on_delete_ventas_gui): Deleted code that was asking to close the
	cash box if the user was the admin.

	* config_file.c (rizoma_get_value, rizoma_get_value_int)
	(rizoma_get_value_boolean, rizoma_get_double_list): Added check of
	DEBUG define to know if we must show an error message when a key
	isn't found on rizoma config file.

	* ventas.c (Descuento): Fixed some problem to calculate percent
	from an amount of money.
	Deleted some commented code.
	(DatosCheque): Deleted commented code.
	Deleted commented functions. TipoVenta() and FillDatosVenta().
	(ventas_win): Added function that must show cash_box buttons when
	the client has set to 1 the value of CAJA on rizoma config file.

2008-07-23  Jonathan Gonzalez V.  <zeus@gnu.org>

	* ventas.c (TipoVenta): Set the focus to entry_discount_money
	every time the window it's called.

	* utils.c (display_calendar): Added calendar_focus_out() to
	handler "focus-out-event" event, this will destroy the widget if