@@ -1,3 +1,7 @@
+2008-07-25  Jonathan Gonzalez V.  <zeus@lunareja.lunareja>
+
+	* postgres-functions.c (GetDayToSell): Deleted function.
+
 2008-07-25  Jonathan Gonzalez V.  <zeus@gnu.org>
 
 	* postgres-functions.c (PutComa): Any coma or point will be
